--- a/src/scss/modules/_animations.scss
+++ b/src/scss/modules/_animations.scss
@@ -1,8 +1,8 @@
 @-webkit-keyframes Title-Flicker {
     0% {color: rgb(180, 180, 180)}
-    20% {color: rgb(80, 80, 80);}
-    40% {color: rgb(0, 0, 0);}
-    60% {color: rgb(0, 0, 0);}
-    80% {color: rgb(80, 80, 80);}
+    20% {color: rgb(120, 120, 120);}
+    40% {color: rgb(80, 80, 80);}
+    60% {color: rgb(80, 80, 80);}
+    80% {color: rgb(120, 120, 120);}
     100% {color: rgb(180, 180, 180)}
 }
